Folder name updated to the required

--- a/Designs/BuyMob/BuyMob.html
+++ b/Designs/BuyMob/BuyMob.html
@@ -38,13 +38,13 @@
     <!-- Put Your Source of Image here -->
 
     <img
-      src="nijin.png"
+      src="BuyMob.png"
       class="img-fluid"
       alt="Home"
       style="margin-left: 40%; margin-top: 3%"
     />
     <img
-      src="nijin_1.png"
+      src="BuyMob_1.png"
       class="img-fluid"
       alt="Home"
       style="margin-left: 40%; margin-top: 3%"
