Name added in html file

--- a/Designs/BuyMob/BuyMob.html
+++ b/Designs/BuyMob/BuyMob.html
@@ -10,7 +10,7 @@
       crossorigin="anonymous"
     />
 
-    <title>Your Name</title>
+    <title>Nijin Nazar</title>
   </head>
   <body>
     <!-- Do not change any of the snippet while doing Pull Request -->
