Remove unnecessary item

--- a/Designs/Cryptocurrency_UI/Cryptocurrency_UI.html
+++ b/Designs/Cryptocurrency_UI/Cryptocurrency_UI.html
@@ -6,6 +6,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 
     <title>Arnab Bhakta</title>
+
+    <style>
+      p.ex1 {
+        margin-left: 20%;
+      }
+    </style>
   </head>
   <body>
 
@@ -39,11 +45,10 @@
 
     <img src="interface_ui.png" class="img-fluid" alt="..." style="margin-left: 40%; margin-top: 3%;">
     <img src="news_ui.png"img-fluid" alt="..." style="margin-left: 40%; margin-top: 3%;">
-    <!-- <img src="UI.jpg" class="img-fluid" alt="..." style="margin-left: 40%; margin-top: 3%;"> -->
-
+    <img src="login_signup_ui.png" class="img-fluid" alt="..." style="margin-left: 40%; margin-top: 3%;">
+    <p class="ex1"><iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FMcWNGrm07PTJdPHjfZTPuP%2FCrypto-App-Design%3Fnode-id%3D0%253A1" allowfullscreen></iframe></p>
     <!-- Incase you have more than one PNG then copy paste the above code which is given down below -->
-    <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FMcWNGrm07PTJdPHjfZTPuP%2FCrypto-App-Design%3Fnode-id%3D0%253A1" allowfullscreen></iframe>
-
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
   </body>
 </html>
