--- a/Designs/Startup_UI/startup_ui.html
+++ b/Designs/Startup_UI/startup_ui.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 
-    <title>Vaishnavi gupta</title>
+    <title>Vaishnavi gupta and Aanya Trehan</title>
   </head>
   <body>
 
@@ -43,6 +43,13 @@
     <img src="Designs\Startup_UI\Uiimages\homepage.png" class="img-fluid" alt="..." style="margin-left: 40%; margin-top: 3%;">
     <img src="Designs\Startusp_UI\Uiimages\company_signup.png" class="img-fluid" alt="..." style="margin-left: 40%; margin-top: 3%;">
     <img src="Designs\Startup_UI\Uiimages\settings.png" class="img-fluid" alt="..." style="margin-left: 40%; margin-top: 3%;">
+
+     <img src="Designs\Startup_UI\Uiimages\profile_search.png" class="img-fluid" alt="..." style="margin-left: 40%; margin-top: 3%;">
+    <img src="Designs\Startup_UI\Uiimages\messenger.png" class="img-fluid" alt="..." style="margin-left: 40%; margin-top: 3%;">
+    <img src="Designs\Startup_UI\Uiimages\company_profile.png" class="img-fluid" alt="..." style="margin-left: 40%; margin-top: 3%;">
+    <img src="Designs\Startup_UI\Uiimages\my_profile.png" class="img-fluid" alt="..." style="margin-left: 40%; margin-top: 3%;">
+    <img src="Designs\Startup_UI\Uiimages\collaborate_.png" class="img-fluid" alt="..." style="margin-left: 40%; margin-top: 3%;">
+    <img src="Designs\Startup_UI\Uiimages\mentor_guidance cell.png" class="img-fluid" alt="..." style="margin-left: 40%; margin-top: 3%;">
     <!-- Incase you have more than one PNG then copy paste the above code which is given down below -->
 
     <!-- Add link of the design -->
