added figma link

--- a/Designs/Mental_Health_UI/mentalhealthUI.html
+++ b/Designs/Mental_Health_UI/mentalhealthUI.html
@@ -36,15 +36,14 @@
   <hr>
 
     <!-- Put Your Source of Image here -->
-    <img src="Designs\" class="img-fluid" alt="..." style="margin-left: 40%; margin-top: 3%;">
-    <img src="Designs\" class="img-fluid" alt="..." style="margin-left: 40%; margin-top: 3%;">
-    <img src="Designs\" class="img-fluid" alt="..." style="margin-left: 40%; margin-top: 3%;">
-    <img src="Designs\" class="img-fluid" alt="..." style="margin-left: 40%; margin-top: 3%;">
-    <img src="Designs\" class="img-fluid" alt="..." style="margin-left: 40%; margin-top: 3%;">
-    <img src="Designs\" class="img-fluid" alt="..." style="margin-left: 40%; margin-top: 3%;">
-    <img src="Designs\" class="img-fluid" alt="..." style="margin-left: 40%; margin-top: 3%;">
-
-     <img src="Designs\" class="img-fluid" alt="..." style="margin-left: 40%; margin-top: 3%;">
+    <img src="Designs\Mental_Health_UI\login.png" class="img-fluid" alt="..." style="margin-left: 40%; margin-top: 3%;">
+    <img src="Designs\Mental_Health_UI\signup.png" class="img-fluid" alt="..." style="margin-left: 40%; margin-top: 3%;">
+    <img src="Designs\Mental_Health_UI\music.png" class="img-fluid" alt="..." style="margin-left: 40%; margin-top: 3%;">
+    <img src="Designs\Mental_Health_UI\homepage.png" class="img-fluid" alt="..." style="margin-left: 40%; margin-top: 3%;">
+    <img src="Designs\Mental_Health_UI\chatbot.png" class="img-fluid" alt="..." style="margin-left: 40%; margin-top: 3%;">
+    <img src="Designs\Mental_Health_UI\habits.png" class="img-fluid" alt="..." style="margin-left: 40%; margin-top: 3%;">
+    <img src="Designs\Mental_Health_UI\achievements.png" class="img-fluid" alt="..." style="margin-left: 40%; margin-top: 3%;">
+    <img src="Designs\Mental_Health_UI\blogs.png" class="img-fluid" alt="..." style="margin-left: 40%; margin-top: 3%;">
 
     <!-- Incase you have more than one PNG then copy paste the above code which is given down below -->
 
